--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.5.2
 Django==3.2.14
+django-admin-thumbnails==0.2.6
 django-ckeditor==6.3.2
 django-js-asset==2.0.0
+django-mptt==0.13.4
 flake8==4.0.1
 importlib-metadata==4.2.0
 mccabe==0.6.1
@@ -9,6 +11,7 @@ Pillow==9.2.0
 pycodestyle==2.8.0
 pyflakes==2.4.0
 pytz==2022.1
+six==1.16.0
 sqlparse==0.4.2
 typing-extensions==4.3.0
 zipp==3.8.1
