--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.5.2
 Django==3.2.14
 django-admin-thumbnails==0.2.6
+django-autoslug==1.9.8
 django-ckeditor==6.3.2
 django-js-asset==2.0.0
 django-mptt==0.13.4
